--- a/package.json
+++ b/package.json
@@ -6,6 +6,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "^5.5.0",
+    "@mui/material": "^5.5.0",
+    "firebase": "^9.6.8",
+    "framer-motion": "^6.2.8",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
