--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@mui/icons-material": "^5.5.0",
     "@mui/material": "^5.5.0",
     "firebase": "^9.6.8",
+    "firebase-admin": "^10.0.2",
+    "firebase-functions": "^3.18.1",
     "framer-motion": "^6.2.8",
     "next": "latest",
     "react": "^17.0.2",
