--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "next start"
   },
   "dependencies": {
-    "@emotion/react": "^11.8.1",
+    "@chakra-ui/react": "^1.8.8",
+    "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
@@ -15,7 +16,7 @@
     "firebase": "^9.6.10",
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.18.1",
-    "framer-motion": "^6.2.8",
+    "framer-motion": "^6.2.9",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
