--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.5.0",
     "@mui/material": "^5.5.0",
+    "axios": "^0.26.1",
     "firebase": "^9.6.10",
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.18.1",
