--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.18.1",
     "framer-motion": "^6.2.9",
+    "moment": "^2.29.2",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
