--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "moment": "^2.29.2",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-copy-to-clipboard": "^5.1.0",
+    "react-dom": "^17.0.2",
+    "react-vis": "^1.11.7"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
