--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^17.0.2",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^17.0.2",
+    "react-scroll": "^1.8.6",
     "react-vis": "^1.11.7"
   },
   "devDependencies": {
